@@ -33,10 +33,9 @@ find_package(Perl REQUIRED)
 find_package(Popt REQUIRED)
 
 find_package(GSSAPI)
-
-if (NOT ${GSSAPI_FLAVOR_HEIMDAL})
-   message (FATAL_ERROR "The heimdal GSS library could not be found. Please make sure the heimdal development package is installed.")
-endif(NOT ${GSSAPI_FLAVOR_HEIMDAL})
+if (NOT "${GSSAPI_FLAVOR_HEIMDAL}" STREQUAL "TRUE")
+  message (FATAL_ERROR "The heimdal GSS library could not be found. Please make sure the heimdal development package is installed.")
+endif(NOT "${GSSAPI_FLAVOR_HEIMDAL}" STREQUAL "TRUE")
 
 include (FindPkgConfig)
 
